--- a/Views/Questions/Create.cshtml
+++ b/Views/Questions/Create.cshtml
@@ -1,10 +1,11 @@
-﻿@model KyotoQuiz.Models.Question
+﻿@model KyotoQuiz.ViewModels.CreateQuestionViewModel
 
 @{
     ViewData["Title"] = "Create";
+    ViewData["Check"] = "正解の選択肢にチェック";
 }
 
-<h1>Create</h1>
+<h1>@ViewBag.Title</h1>
 
 <h4>Question</h4>
 <hr />
@@ -22,14 +23,47 @@
             </div>
             <div class="form-group">
                 <label asp-for="Grade" class="control-label"></label>
-                <input asp-for="Grade" class="form-control" />
-                <span asp-validation-for="Grade" class="text-danger"></span>
+                <select asp-for="Grade" class="form-control" asp-items="ViewBag.Grade"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Number" class="control-label"></label>
+                <input asp-for="Number" class="form-control" />
+                <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="ContentOfOrderOne" class="control-label"></label>
+                <input asp-for="ContentOfOrderOne" class="form-control" />
+                <span asp-validation-for="ContentOfOrderOne" class="text-danger"></span>
+            </div>
+            <div class="form-group"><input type="checkbox" asp-for="IsOrderOneAnswer" />@ViewBag.Check</div>
+
+            <div class="form-group">
+                <label asp-for="ContentOfOrderTwo" class="control-label"></label>
+                <input asp-for="ContentOfOrderTwo" class="form-control" />
+                <span asp-validation-for="ContentOfOrderTwo" class="text-danger"></span>
+            </div>
+            <div class="form-group"><input type="checkbox" asp-for="IsOrderTwoAnswer" />@ViewBag.Check</div>
+
+            <div class="form-group">
+                <label asp-for="ContentOfOrderThree" class="control-label"></label>
+                <input asp-for="ContentOfOrderThree" class="form-control" />
+                <span asp-validation-for="ContentOfOrderThree" class="text-danger"></span>
+            </div>
+            <div class="form-group"><input type="checkbox" asp-for="IsOrderThreeAnswer" />@ViewBag.Check</div>
+
+            <div class="form-group">
+                <label asp-for="ContentOfOrderFour" class="control-label"></label>
+                <input asp-for="ContentOfOrderFour" class="form-control" />
+                <span asp-validation-for="ContentOfOrderFour" class="text-danger"></span>
+            </div>
+            <div class="form-group"><input type="checkbox" asp-for="IsOrderFourAnswer" />@ViewBag.Check</div>
+
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
