--- a/Views/Questions/Create.cshtml
+++ b/Views/Questions/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    ViewData["Check"] = "正解の選択肢にチェック";
+    ViewData["Check"] = "正解にチェック";
 }
 
 <h1>@ViewBag.Title</h1>
@@ -13,6 +13,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            
+            <h5>問題の基本情報</h5>
+            
             <div class="form-group">
                 <label asp-for="ImplementedId" class="control-label"></label>
                 <select asp-for="ImplementedId" class ="form-control" asp-items="ViewBag.ImplementedId"></select>
@@ -36,33 +39,47 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
 
+            <hr />
+            <h5>選択肢情報</h5>
+            
+            @{
+                if (ViewBag.HaveSomeAnswer)
+                {
+                    <p><a class="text-warning">正解を複数選択しています</a></p>
+                }
+            }
+
             <div class="form-group">
                 <label asp-for="ContentOfOrderOne" class="control-label"></label>
+                <input type="checkbox" asp-for="IsOrderOneAnswer"/>@ViewBag.Check
                 <input asp-for="ContentOfOrderOne" class="form-control" />
                 <span asp-validation-for="ContentOfOrderOne" class="text-danger"></span>
             </div>
-            <div class="form-group"><input type="checkbox" asp-for="IsOrderOneAnswer" />@ViewBag.Check</div>
+            
 
             <div class="form-group">
                 <label asp-for="ContentOfOrderTwo" class="control-label"></label>
+                <input type="checkbox" asp-for="IsOrderTwoAnswer" />@ViewBag.Check
                 <input asp-for="ContentOfOrderTwo" class="form-control" />
                 <span asp-validation-for="ContentOfOrderTwo" class="text-danger"></span>
             </div>
-            <div class="form-group"><input type="checkbox" asp-for="IsOrderTwoAnswer" />@ViewBag.Check</div>
 
             <div class="form-group">
                 <label asp-for="ContentOfOrderThree" class="control-label"></label>
+                <input type="checkbox" asp-for="IsOrderThreeAnswer" />@ViewBag.Check
                 <input asp-for="ContentOfOrderThree" class="form-control" />
                 <span asp-validation-for="ContentOfOrderThree" class="text-danger"></span>
             </div>
-            <div class="form-group"><input type="checkbox" asp-for="IsOrderThreeAnswer" />@ViewBag.Check</div>
 
             <div class="form-group">
                 <label asp-for="ContentOfOrderFour" class="control-label"></label>
+                <input type="checkbox" asp-for="IsOrderFourAnswer" />@ViewBag.Check
                 <input asp-for="ContentOfOrderFour" class="form-control" />
                 <span asp-validation-for="ContentOfOrderFour" class="text-danger"></span>
             </div>
-            <div class="form-group"><input type="checkbox" asp-for="IsOrderFourAnswer" />@ViewBag.Check</div>
+
+            <hr />
+            <h5>解説情報</h5>
 
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
