--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p><a asp-controller="Questions" asp-action="Index">問題の一覧を確認する</a></p>
     <p><a asp-controller="Questions" asp-action="Create">問題を作成する</a></p>
 </div>
