--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -1,31 +1,46 @@
-﻿@model IEnumerable<KyotoQuiz.Models.Question>
+﻿@using KyotoQuiz.ViewModels;
+@using Microsoft.AspNetCore.Html;
+@model IEnumerable<KyotoQuiz.ViewModels.CreateQuestionViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@ViewBag.Title</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Implemented)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Grade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Genre)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Content)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ContentOfOrderOne)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContentOfOrderTwo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContentOfOrderThree)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContentOfOrderFour)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Implemented)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genre)
             </th>
             <th></th>
         </tr>
@@ -34,19 +49,71 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Grade)
+                @Html.DisplayFor(modelItem => item.Implemented.Year) 年 第 @Html.DisplayFor(modelItem => item.Implemented.Times) 回
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Grade) 級
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genre.Content)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Content)
             </td>
             <td>
+                    @{
+                        if (item.IsOrderOneAnswer)
+                        {
+                            <div class="text-primary">@Html.DisplayFor(modelItem => item.ContentOfOrderOne)</div>
+
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.ContentOfOrderOne)
+                        }
+                    }
+            </td>
+            <td>
+                    @{
+                        if (item.IsOrderTwoAnswer)
+                        {
+                            <div class="text-primary">@Html.DisplayFor(modelItem => item.ContentOfOrderTwo)</div>
+
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.ContentOfOrderTwo)
+                        }
+                    }
+            </td>
+            <td>
+                    @{
+                        if (item.IsOrderThreeAnswer)
+                        {
+                            <div class="text-primary">@Html.DisplayFor(modelItem => item.ContentOfOrderThree)</div>
+
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.ContentOfOrderThree)
+                        }
+                    }
+            </td>
+            <td>
+                    @{
+                        if (item.IsOrderFourAnswer)
+                        {
+                            <div class="text-primary">@Html.DisplayFor(modelItem => item.ContentOfOrderFour)</div>
+
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.ContentOfOrderFour)
+                        }
+                    }
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Implemented.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
