--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,4 +7,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p><a asp-controller="Questions" asp-action="Index">問題の一覧を確認する</a></p>
     <p><a asp-controller="Questions" asp-action="Create">問題を作成する</a></p>
+    <p><a asp-controller="Questions" asp-action="CreateFromCsv">問題を作成する(CSV)</a></p>
+    <p><a asp-controller="Results" asp-action="Create">問題を演習する</a></p>
+    <p><a asp-controller="Results" asp-action="Index">回答状況を確認する</a></p>
 </div>
