--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -118,7 +118,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-controller="Results" asp-action="Create" asp-route-id="@item.Id">Exam</a>
             </td>
         </tr>
 }
