--- a/Views/Results/Create.cshtml
+++ b/Views/Results/Create.cshtml
@@ -99,7 +99,7 @@
 </div>
 
 <div>
-    <a asp-controller="Results" asp-action="Create" asp-route-id="@beforeQuestionId">Before Question</a>
+    <a asp-controller="Results" asp-action="Create" asp-route-id="@beforeQuestionId">Before</a>
     <a asp-controller="Results" asp-action="Create" asp-route-id="@nextQuestionId">Next Question</a>
 </div>
 
