--- a/Views/Results/Create.cshtml
+++ b/Views/Results/Create.cshtml
@@ -17,15 +17,18 @@
     if (ViewBag.Status == AnswerStatus.Correct)
     {
         <div class="alert alert-success" role="alert">
-            正解!!
+            <i class="bi bi-check-circle"></i>正解!!
         </div>
     }
 
     if (ViewBag.Status == AnswerStatus.Incorrect)
     {
         <div class="alert alert-danger" role="alert">
-            不正解...
+            <i class="bi bi-x-circle"></i>不正解...
         </div>
+        <form asp-controller="Questions" asp-action="Details" asp-route-id="@Model.QuestionId">
+            <input type="submit" value="正解と解説を確認する" class="btn btn-warning">
+        </form>
     }
 }
 
@@ -87,6 +90,8 @@
                 <span asp-validation-for="SelectedOrder" class="text-danger"></span>
             </div>
 
+            <br>
+
             <div class="form-group">
                 <input type="submit" value="Answer" class="btn btn-primary" />
             </div>
@@ -94,13 +99,13 @@
     </div>
 </div>
 
-<div>
-    <a asp-controller="Questions" asp-action="Index">Back to List</a>
-</div>
-
-<div>
-    <a asp-controller="Results" asp-action="Create" asp-route-id="@beforeQuestionId">Before</a>
-    <a asp-controller="Results" asp-action="Create" asp-route-id="@nextQuestionId">Next Question</a>
+<div class="button-container">
+    <a asp-controller="Results" asp-action="Create" asp-route-id="@beforeQuestionId" class="button left-button">
+        <i class="bi bi-arrow-left">前の問題</i>
+    </a>
+    <a asp-controller="Results" asp-action="Create" asp-route-id="@nextQuestionId" class="button right-button">
+        <i class="bi bi-arrow-right">次の問題</i>
+    </a>
 </div>
 
 @section Scripts {
