--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p><a asp-controller="Questions" asp-action="Index">問題の一覧を確認する</a></p>
-    <p><a asp-controller="Questions" asp-action="Create">問題を作成する</a></p>
-    <p><a asp-controller="Questions" asp-action="CreateFromCsv">問題を作成する(CSV)</a></p>
-    <p><a asp-controller="Results" asp-action="Create">問題を演習する</a></p>
-    <p><a asp-controller="Results" asp-action="Index">回答状況を確認する</a></p>
+<div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</div>
+
+<hr>
+
+<div class="list-group">
+    <a class="list-group-item list-group-item-action active">
+        Let's study Kyoto Quiz !!
+    </a>
+    <a asp-controller="Questions" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-question-circle-fill"></i>Confirm Question</a>
+    <a asp-controller="Questions" asp-action="Create" class="list-group-item list-group-item-action"><i class="bi bi-clipboard"></i>Create Question</a>
+    <a asp-controller="Questions" asp-action="CreateFromCsv" class="list-group-item list-group-item-action disabled"><i class="bi bi-clipboard-fill"></i>Create Question from CSV file</a>
+    <a asp-controller="Results" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-grid-3x2-gap"></i>Confirm Results</a>
 </div>
