--- a/Views/Results/Index.cshtml
+++ b/Views/Results/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "解答状況";
     var total = Model.Count();
     var correct = Model.Where(m => m.IsCorrect).Count();
-    double accuracy = (double)correct / total * 100;
+    double accuracy = Math.Round(((double)correct / total * 100), 2);
 }
 
 <h1>@ViewBag.Title</h1>
@@ -15,9 +15,9 @@
 </div>
 
 <!--
-<button class="btn btn-primary" id="toggleTableButton" onclick="toggleTable()">
-    Toggle Table
-</button>
+    <button class="btn btn-primary" id="toggleTableButton" onclick="toggleTable()">
+        Toggle Table
+    </button>
 -->
 
 <table class="table" id="resultTable">
