--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,8 +16,9 @@
     <a class="list-group-item list-group-item-action active">
         Let's study Kyoto Quiz !!
     </a>
-    <a asp-controller="Questions" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-question-circle-fill"></i>Confirm Question</a>
-    <a asp-controller="Questions" asp-action="Create" class="list-group-item list-group-item-action"><i class="bi bi-clipboard"></i>Create Question</a>
-    <a asp-controller="Questions" asp-action="CreateFromCsv" class="list-group-item list-group-item-action disabled"><i class="bi bi-clipboard-fill"></i>Create Question from CSV file</a>
-    <a asp-controller="Results" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-grid-3x2-gap"></i>Confirm Results</a>
+    <a asp-controller="Questions" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-question-circle-fill"></i> Confirm Question</a>
+    <a asp-controller="Results" asp-action="SetOption" class="list-group-item list-group-item-action"><i class="bi bi-clipboard"></i> Exam Question</a>
+    <a asp-controller="Questions" asp-action="Create" class="list-group-item list-group-item-action"><i class="bi bi-clipboard"></i> Create Question</a>
+    <a asp-controller="Questions" asp-action="CreateFromCsv" class="list-group-item list-group-item-action disabled"><i class="bi bi-clipboard-fill"></i> Create Question from CSV file</a>
+    <a asp-controller="Results" asp-action="Index" class="list-group-item list-group-item-action"><i class="bi bi-grid-3x2-gap"></i> Confirm Results</a>
 </div>
