--- a/Views/Questions/CreateFromCsv.cshtml
+++ b/Views/Questions/CreateFromCsv.cshtml
@@ -1,4 +1,4 @@
-﻿@model KyotoQuiz.ViewModels.CreateQuestionViewModel
+﻿@model KyotoQuiz.ViewModels.QuestionViewModel
 
 @{
     ViewData["Title"] = "Create from CSV file.";
