--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using KyotoQuiz.ViewModels;
 @using Microsoft.AspNetCore.Html;
-@model IEnumerable<KyotoQuiz.ViewModels.CreateQuestionViewModel>
+@model IEnumerable<KyotoQuiz.ViewModels.QuestionViewModel>
 
 @{
     ViewData["Title"] = "Index";
